fix infobox images on mobile

--- a/skins/Citizen/resources/skins.citizen.styles/common/templates.less
+++ b/skins/Citizen/resources/skins.citizen.styles/common/templates.less
@@ -52,6 +52,11 @@
     .image, .infobox-image {
         text-align: center;
         border-bottom: 1px solid var(--border-color-base);
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .infobox-label {
